fix clipped logo

--- a/src/css/components/modal.component.pcss
+++ b/src/css/components/modal.component.pcss
@@ -23,6 +23,7 @@
     display: flex;
     justify-content: space-between;
     grid-area: 1 / 1 / 2 / 4;
+    padding: 1rem 0;
 }
 
 @media (--for-tablet-landscape-up) {
